--- a/index.html
+++ b/index.html
@@ -42,38 +42,11 @@
 </head>
 <body>
 
-    <h1>Taylor Swift: A Jornada Musical</h1>
+    <h1>taylor swift gif pack</h1>
 
     <div class="section">
-        <h2>Biografia</h2>
-        <p>Taylor Swift é uma cantora e compositora americana, conhecida por suas letras autobiográficas e sua evolução musical ao longo dos anos. Nascida em 13 de dezembro de 1989, em Reading, Pennsylvania, ela começou sua carreira no country antes de se tornar uma das maiores estrelas pop do mundo.</p>
-    </div>
-
-    <div class="section">
-        <h2>Discografia</h2>
-        <ul>
-            <li><strong>Taylor Swift (2006)</strong></li>
-            <li><strong>Fearless (2008)</strong></li>
-            <li><strong>Speak Now (2010)</strong></li>
-            <li><strong>Red (2012)</strong></li>
-            <li><strong>1989 (2014)</strong></li>
-            <li><strong>Lover (2019)</strong></li>
-            <li><strong>Folklore (2020)</strong></li>
-            <li><strong>Evermore (2020)</strong></li>
-            <li><strong>Midnights (2022)</strong></li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Músicas Favoritas</h2>
-        <p>Algumas das músicas mais icônicas de Taylor incluem:</p>
-        <ul>
-            <li>"Love Story"</li>
-            <li>"Shake It Off"</li>
-            <li>"Blank Space"</li>
-            <li>"Cardigan"</li>
-            <li>"Anti-Hero"</li>
-        </ul>
+        <h2>RULES</h2>
+        <p>.</p>
     </div>
 
     <div class="section gallery">
@@ -83,13 +56,8 @@
         <img src="https://64.media.tumblr.com/87d662ac21465dad8091848f3757e351/c01b446e73213f03-44/s540x810/2a780228465dcff49770682c412465d182f50cfe.gif" alt="Taylor Swift 3">
     </div>
 
-    <div class="section">
-        <h2>Notícias e Atualizações</h2>
-        <p>Fique atento para as últimas notícias sobre Taylor Swift, incluindo lançamentos de álbuns e turnês!</p>
-    </div>
-
     <div class="footer">
-        <p>© 2023 Taylor Swift Fan Page. Todos os direitos reservados.</p>
+        <p>© 2025 Taylor Swift Fan Page. Todos os direitos reservados.</p>
     </div>
 
 </body>
