--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taylor Swift: A Jornada Musical</title>
+    <title>Taylor swift gif pack</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-    <h1>taylor swift gif pack</h1>
+    <h1>Taylor swift gif pack</h1>
 
     <div class="section">
         <h2>RULES</h2>
@@ -50,14 +50,14 @@
     </div>
 
     <div class="section gallery">
-        <h2>Galeria de Gifs</h2>
+        <h2>GIFS</h2>
         <img src="https://64.media.tumblr.com/9a39cbf8f910d369984bb6a8f8b5a3d0/c01b446e73213f03-cd/s540x810/83a2e7cf79e92f41786cd90f4813b1f317121a32.gif" alt="Taylor Swift 1">
         <img src="https://64.media.tumblr.com/18830c11cb25c8180c4fa8ec32706589/c01b446e73213f03-7c/s540x810/18fa006a1fed6c9d030563ffcb26683a4bc07989.gif" alt="Taylor Swift 2">
         <img src="https://64.media.tumblr.com/87d662ac21465dad8091848f3757e351/c01b446e73213f03-44/s540x810/2a780228465dcff49770682c412465d182f50cfe.gif" alt="Taylor Swift 3">
     </div>
 
     <div class="footer">
-        <p>© 2025 Taylor Swift Fan Page. Todos os direitos reservados.</p>
+        <p>© 2025 bebelasgifs @ tumblr. All rights reserved.</p>
     </div>
 
 </body>
